--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,17 @@
       "ToonLite\\Tests\\": "tests/"
     }
   },
+  "scripts": {
+    "test": "phpunit",
+    "phpstan": "phpstan analyse"
+  },
   "require": {
     "php": ">=8.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5"
+    "phpunit/phpunit": "^10.5",
+    "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-strict-rules": "^2.0"
   },
   "minimum-stability": "stable"
 }
