--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,17 @@
 {
   "name": "manoj/toon-php-lite",
+  "version": "0.4.0",
   "description": "Lite PHP implementation of TOON (Token-Oriented Object Notation)",
   "type": "library",
+  "keywords": [
+    "toon",
+    "json",
+    "llm",
+    "encoder",
+    "decoder",
+    "serialization",
+    "php"
+  ],
   "license": "MIT",
   "autoload": {
     "psr-4": {
